hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_getExtensionName_basic.php
<?php
 	$rc=new reflectionClass('domDocument');
 	var_dump( $rc->getExtensionName()) ;
?>
